[package]
name = "blockfall-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
egui = "0.20.1"
egui_extras = "0.20.0"
eframe = "0.20.1"
tui = "0.19.0"
crossterm = "0.25"